examples/test/testpolicy3351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3351
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key44: value27
      key31: value3
      key42: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value37
          key24: value45
          key7: value15
      podSelector:
        matchLabels:
          key31: value32
